# 3DViewer

./: README.md
src/: 3dviewer.texi  CMakeLists.txt  Makefile  settings.ini
src/3dViewer/: GLViewer.cpp  GLViewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Parser/: parser.c  parser.h
src/Tester/: cases.c  tester.c  tester.h
src/Transformer/: transformer.c  transformer.h
